# veri-backend/src/routes/users.route.ts
@@ -3,6 +3,7 @@ import UsersController from '@controllers/users.controller';
 import { CreateUserDto } from '@dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
 import validationMiddleware from '@middlewares/validation.middleware';
+import authMiddleware from '@/middlewares/auth.middleware';
 
 class UsersRoute implements Routes {
   public path = '/users';
@@ -14,7 +15,11 @@ class UsersRoute implements Routes {
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}`, this.usersController.getUsers);
+    this.router.get(
+      `${this.path}`,
+      authMiddleware,
+      this.usersController.getUsers
+    );
     this.router.get(`${this.path}/:id(\\d+)`, this.usersController.getUserById);
     this.router.post(
       `${this.path}`,
